--- a/src/screens/UserPortal/Settings/Settings.module.css
+++ b/src/screens/UserPortal/Settings/Settings.module.css
@@ -1,7 +1,7 @@
 .mainContainer {
   width: 50%;
   flex-grow: 3;
-  padding: 40px;
+  padding: 25px;
   max-height: 100%;
   overflow: auto;
 }
@@ -10,17 +10,38 @@
   height: calc(100vh - 66px);
 }
 
-.content {
+.cardHeader .cardTitle {
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+.cardHeader {
+  padding: 1.25rem 1rem 1rem 1rem;
+  border-bottom: 1px solid var(--bs-gray-200);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.cardBody {
+  padding: 1.25rem 1rem 1.5rem 1rem;
   display: flex;
   flex-direction: column;
-  max-width: 300px;
-  gap: 15px;
 }
 
-.imageInput {
-  background-color: white;
+.cardLabel {
+  font-weight: bold;
+  padding-bottom: 1px;
+  font-size: 14px;
+  color: #707070;
+  margin-bottom: 10px;
 }
 
-.colorLight {
-  background-color: white;
+.cardControl {
+  margin-bottom: 20px;
+}
+
+.cardButton {
+  width: fit-content;
+  float: right;
 }
