Added Instagram and Slack Icon

--- a/src/screens/LoginPage/LoginPage.module.css
+++ b/src/screens/LoginPage/LoginPage.module.css
@@ -225,3 +225,12 @@
 .youtubeIcon {
   color: #ff0000;
 }
+
+.slackIcon {
+  width: 30px;
+  height: 30px;
+}
+
+.instagramIcon {
+  color: #e4405f;
+}
