Feature: Social Icons Integration on Login and Signup Page (#1326)
* Feature: Social Icons Integration on Login and Signup Page

* Changes social icons color

* Added Instagram and Slack Icon

* Fixes Color of Twitter Icon

* Added Social Icons from figma design

--- a/src/screens/UserPortal/UserLoginPage/UserLoginPage.module.css
+++ b/src/screens/UserPortal/UserLoginPage/UserLoginPage.module.css
@@ -45,4 +45,14 @@ body::before {
   .leftPane {
     width: 100%;
   }
+
+  .socialIcons {
+    margin-bottom: 1rem;
+  }
+}
+
+.socialIcons {
+  display: flex;
+  gap: 16px;
+  justify-content: center;
 }
