Removed unnecessary css.

--- a/src/components/OrgListCard/OrgListCard.module.css
+++ b/src/components/OrgListCard/OrgListCard.module.css
@@ -27,7 +27,7 @@
   object-fit: contain;
 }
 
-.orgCard .innerContainer .orgImgContainer .emptyImg {
+.orgCard .innerContainer .orgImgContainer {
   width: 125px;
   height: 120px;
   background-color: var(--bs-gray-200);
