Added letter based avatar in case of blank display picture (#1349)
* Added letter based avatar in case of blank display picture

* remove console log

* removed spaces

* removed spaces

* removed spaces

* removed spaces

* removed spaces

* removed spaces

* removed spaces

* removed spaces in  INSTALLATION.md

* Accomodated empty image test

* Removed 'orgimg' as a className due to the absence of corresponding CSS styles.

* Fixed border radius for organization display avatar

* Removed unnecessary css.

---------

Co-authored-by: arpitannd <anotheranand@gmail.com>

--- a/src/components/OrgListCard/OrgListCard.module.css
+++ b/src/components/OrgListCard/OrgListCard.module.css
@@ -21,13 +21,13 @@
   border-radius: 4px;
 }
 
-.orgCard .innerContainer .orgImgContainer img {
+.orgCard .innerContainer .orgImgContainer {
   width: 125px;
   height: 120px;
   object-fit: contain;
 }
 
-.orgCard .innerContainer .orgImgContainer .emptyImg {
+.orgCard .innerContainer .orgImgContainer {
   width: 125px;
   height: 120px;
   background-color: var(--bs-gray-200);
