Refactoring and Design adjustments

--- a/src/screens/LoginPage/LoginPage.module.css
+++ b/src/screens/LoginPage/LoginPage.module.css
@@ -34,14 +34,21 @@
   margin: 0;
   position: absolute;
   top: 1rem;
-  left: 2rem;
+  left: 1rem;
+}
+
+.langChangeBtnStyle {
+  width: 7.5rem;
+  height: 2.2rem;
+  padding: 0;
 }
 
 .row .right_portion .talawa_logo {
-  height: 150px;
-  width: 150px;
+  height: 5rem;
+  width: 5rem;
   display: block;
   margin: 1rem auto;
+  margin-top: 30px;
   -webkit-animation: zoomIn 0.3s ease-in-out;
   animation: zoomIn 0.3s ease-in-out;
 }
@@ -49,38 +56,13 @@
 .row .orText {
   display: block;
   position: absolute;
-  top: calc(-0.7rem - 0.5rem);
+  top: 0;
   left: calc(50% - 2.6rem);
   margin: 0 auto;
-  padding: 0.5rem 2rem;
+  padding: 0.35rem 2rem;
   z-index: 100;
   background: var(--bs-white);
   color: var(--bs-secondary);
-}
-
-.navLinkClass {
-  display: inline-block;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-  line-height: 1.5;
-  text-align: center;
-  vertical-align: middle;
-  cursor: pointer;
-  color: #212529;
-  border-radius: 0.25rem;
-  width: 100%;
-  box-sizing: border-box;
-  font-weight: 500;
-  transition: font-weight 0.3s ease;
-}
-
-.navLinkClass:hover {
-  font-weight: 700;
-}
-
-.activeLink {
-  border-bottom: 3px solid;
-  width: 100%;
 }
 
 @media (max-width: 992px) {
@@ -150,8 +132,8 @@
   }
 
   .row .right_portion .talawa_logo {
-    height: 120px;
-    margin: 0 auto 2rem auto;
+    height: 80px;
+    margin: 1rem auto 0.5rem auto;
   }
 
   .socialIcons {
