--- a/src/components/EventListCard/EventListCard.module.css
+++ b/src/components/EventListCard/EventListCard.module.css
@@ -88,13 +88,18 @@
   padding-right: 5px;
   padding-left: 5px;
 }
-.checkboxdiv > label {
+.checkboxdiv > div label {
   margin-right: 50px;
 }
 .checkboxdiv > label > input {
   margin-left: 10px;
 }
-
+.dispflex {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+  margin-right: 5px;
+}
 .dispflex > input {
   width: 20%;
   border: none;
@@ -103,9 +108,14 @@
 }
 .checkboxdiv {
   display: flex;
+  flex-direction: column;
 }
-.checkboxdiv > div {
+/* .checkboxdiv > div {
   width: 50%;
+} */
+.checkboxContainer {
+  display: flex;
+  justify-content: space-between;
 }
 
 .preview {
