--- a/src/components/LeftDrawer/LeftDrawer.module.css
+++ b/src/components/LeftDrawer/LeftDrawer.module.css
@@ -71,11 +71,6 @@
   padding: 2.5rem 1rem 2.5rem 1rem;
 }
 
-.leftDrawer .profileContainer:focus {
-  outline: none;
-  background-color: #5ac989;
-}
-
 .leftDrawer .imageContainer {
   width: 68px;
 }
@@ -97,7 +92,7 @@
 }
 
 .leftDrawer .profileContainer .profileText .primaryText .primaryTextWhite {
-  color: white;
+  color: var(--bs-white);
 }
 
 .leftDrawer .profileContainer .profileText .secondaryText {
@@ -108,12 +103,8 @@
   text-transform: capitalize;
 }
 
-.leftDrawer .profileContainer .profileText .secondaryTextBlack {
-  color: var(--bs-secondary);
-}
-
 .leftDrawer .profileContainer .profileText .secondaryTextWhite {
-  color: rgb(230, 230, 230);
+  color: var(--bs-gray-100);
 }
 
 .logout {
