--- a/src/components/LeftDrawerOrg/LeftDrawerOrg.module.css
+++ b/src/components/LeftDrawerOrg/LeftDrawerOrg.module.css
@@ -115,15 +115,6 @@
   padding: 2.5rem 1rem 2.5rem 1rem;
 }
 
-.leftDrawer .profileContainer:focus {
-  background-color: #5ac989 !important;
-}
-
-.leftDrawer .profileContainer:focus {
-  outline: none;
-  background-color: var(--bs-gray-100);
-}
-
 .leftDrawer .imageContainer {
   width: 68px;
 }
@@ -144,7 +135,7 @@
   font-weight: 600;
 }
 .leftDrawer .profileContainer .profileText .primaryText .primaryTextWhite {
-  color: white;
+  color: var(--bs-white);
 }
 
 .leftDrawer .profileContainer .profileText .secondaryText {
@@ -155,12 +146,8 @@
   text-transform: capitalize;
 }
 
-.leftDrawer .profileContainer .profileText .secondaryTextBlack {
-  color: var(--bs-secondary);
-}
-
 .leftDrawer .profileContainer .profileText .secondaryTextWhite {
-  color: rgb(230, 230, 230);
+  color: var(--bs-gray-100);
 }
 
 .logout {
