Fix: Inconsistent Use of Icons to Minimize Left Column Navbar
- Implemented the same minimization method used in the main organization pages,
  ensuring a consistent user experience throughout the application.

Signed-off-by: Akhilender <akhilenderb9@gmail.com>

--- a/src/components/LeftDrawerEvent/LeftDrawerEvent.module.css
+++ b/src/components/LeftDrawerEvent/LeftDrawerEvent.module.css
@@ -149,6 +149,10 @@
   text-transform: capitalize;
 }
 
+.logout {
+  margin-bottom: 50px;
+}
+
 @media (max-width: 1120px) {
   .leftDrawer {
     width: calc(250px + 2rem);
@@ -189,6 +193,10 @@
     display: flex;
     z-index: 100;
     animation: openDrawer 0.6s ease-in-out;
+  }
+
+  .logout {
+    margin-bottom: 1.5rem !important;
   }
 }
 
