--- a/src/components/EventCalendar/EventCalendar.module.css
+++ b/src/components/EventCalendar/EventCalendar.module.css
@@ -62,6 +62,9 @@
   text-decoration: underline;
   color: #31bb6b;
 }
+.day__events {
+  background-color: #def6e1;
+}
 .btn__today {
   transition: ease-in all 200ms;
   font-family: Arial;
@@ -114,5 +117,11 @@
   }
   .day {
     height: 5rem;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .btn__more {
+    font-size: 12px;
   }
 }
