refactor: standardized left drawer expansion/collapse methodology
- Previously, screens with a width of <= 820px utilized the hamburger icon for left drawer handling.
- With this change, all screens, regardless of width, will now have a consistent left drawer handling method,
  which was previously exclusive to screens with a width > 820px.
- The superadmin screen, organization screen, and event dashboard screen are all affected by this change.
- All changes have been verified and covered by tests.
- This modification aims to establish consistency throughout the entire application.

Signed-off-by: Akhilender <akhilenderb9@gmail.com>

--- a/src/components/LeftDrawerEvent/LeftDrawerEventWrapper.module.css
+++ b/src/components/LeftDrawerEvent/LeftDrawerEventWrapper.module.css
@@ -34,6 +34,9 @@
 }
 .opendrawer {
   position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   top: 0;
   left: 0;
   width: 40px;
@@ -44,10 +47,6 @@
   border-radius: 0px;
   margin-right: 20px;
   color: black;
-}
-
-.mobileopenBtn {
-  display: none;
 }
 
 @media (max-width: 1120px) {
@@ -62,7 +61,11 @@
 /* For tablets */
 @media (max-width: 820px) {
   .pageContainer {
-    padding-left: 1.5rem;
+    padding-left: 2.5rem;
+  }
+
+  .opendrawer {
+    width: 25px;
   }
 
   .contract,
@@ -71,19 +74,8 @@
   }
 
   .collapseSidebarButton {
-    display: none;
-  }
-}
-
-@media (max-width: 820px) {
-  .pageContainer {
-    padding: 1rem;
-  }
-  .mobileopenBtn {
-    display: block;
-  }
-  .opendrawer,
-  .collapseSidebarButton {
-    display: none;
+    width: 100%;
+    left: 0;
+    right: 0;
   }
 }
