--- a/src/components/EventCalendar/EventCalendar.module.css
+++ b/src/components/EventCalendar/EventCalendar.module.css
@@ -38,14 +38,31 @@
   grid-template-columns: repeat(7, minmax(0, 1fr));
   grid-template-rows: repeat(6, 1fr);
 }
-.calendar__hours {
+.calendar_hour_text_container {
   display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  border-right: 1px solid gray;
+  width: 50px;
 }
-.calendar__hour {
-  border-bottom: 1px solid gray;
-  list-style: none;
+.calendar_hour_text {
+  top: 20px;
+  left: -5px;
+  position: relative;
+}
+.calendar_hour_block {
   display: flex;
-  border-end-end-radius: 5px;
+  flex-direction: row;
+  border-bottom: 1px solid gray;
+  position: relative;
+  height: 70px;
+  border-bottom-right-radius: 5px;
+}
+.event_list_parent {
+  position: relative;
+}
+.dummyWidth {
+  width: 1px;
 }
 .day {
   background-color: #ffffff;
@@ -56,6 +73,7 @@
   color: #4b4b4b;
   font-weight: 600;
   height: 8rem;
+  position: relative;
 }
 .day__outside {
   background-color: #eeeded;
@@ -85,7 +103,7 @@
   border: none;
 }
 .selectType {
-  padding: 10px 10px 10px 10px;
+  padding: 16px 10px 16px 10px;
   border-radius: 10px;
   margin: 0px 5px 0px 5px;
 }
@@ -106,7 +124,10 @@
 .expand_event_list {
   display: block;
 }
-
+.list_container {
+  padding: 5px;
+  width: fit-content;
+}
 .expand_list_container {
   width: 200px;
   max-height: 250px;
@@ -119,6 +140,10 @@
   background-color: rgb(241, 241, 241);
   border: 1px solid rgb(201, 201, 201);
   border-radius: 5px;
+  margin: 5px;
+}
+.flex_grow {
+  flex-grow: 1;
 }
 
 @media only screen and (max-width: 700px) {
