--- a/src/components/EventCalendar/EventCalendar.module.css
+++ b/src/components/EventCalendar/EventCalendar.module.css
@@ -38,6 +38,32 @@
   grid-template-columns: repeat(7, minmax(0, 1fr));
   grid-template-rows: repeat(6, 1fr);
 }
+.calendar_hour_text_container {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  border-right: 1px solid gray;
+  width: 50px;
+}
+.calendar_hour_text {
+  top: 20px;
+  left: -5px;
+  position: relative;
+}
+.calendar_hour_block {
+  display: flex;
+  flex-direction: row;
+  border-bottom: 1px solid gray;
+  position: relative;
+  height: 70px;
+  border-bottom-right-radius: 5px;
+}
+.event_list_parent {
+  position: relative;
+}
+.dummyWidth {
+  width: 1px;
+}
 .day {
   background-color: #ffffff;
   padding-left: 0.3rem;
@@ -47,6 +73,7 @@
   color: #4b4b4b;
   font-weight: 600;
   height: 8rem;
+  position: relative;
 }
 .day__outside {
   background-color: #eeeded;
@@ -75,6 +102,11 @@
   margin-left: 20px;
   border: none;
 }
+.selectType {
+  padding: 16px 10px 16px 10px;
+  border-radius: 10px;
+  margin: 0px 5px 0px 5px;
+}
 .btn__more {
   border: 0px;
   font-size: 14px;
@@ -92,12 +124,15 @@
 .expand_event_list {
   display: block;
 }
-
+.list_container {
+  padding: 5px;
+  width: fit-content;
+}
 .expand_list_container {
   width: 200px;
   max-height: 250px;
   z-index: 10;
-  position: relative;
+  position: absolute;
   left: auto;
   right: auto;
   overflow: auto;
@@ -105,6 +140,10 @@
   background-color: rgb(241, 241, 241);
   border: 1px solid rgb(201, 201, 201);
   border-radius: 5px;
+  margin: 5px;
+}
+.flex_grow {
+  flex-grow: 1;
 }
 
 @media only screen and (max-width: 700px) {
