--- a/src/components/EventCalendar/EventCalendar.module.css
+++ b/src/components/EventCalendar/EventCalendar.module.css
@@ -42,7 +42,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-end;
-  border-right: 1px solid gray;
+  border-right: 1px solid #8d8d8d55;
   width: 50px;
 }
 .calendar_hour_text {
@@ -53,7 +53,7 @@
 .calendar_hour_block {
   display: flex;
   flex-direction: row;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid #8d8d8d55;
   position: relative;
   height: 70px;
   border-bottom-right-radius: 5px;
